--- a/Plugin.FirebasePushNotification/Plugin.FirebasePushNotification.csproj
+++ b/Plugin.FirebasePushNotification/Plugin.FirebasePushNotification.csproj
@@ -7,13 +7,17 @@
     <TargetFrameworks Condition=" '$(OS)' == 'Windows_NT' ">uap10.0.17763;$(TargetFrameworks)</TargetFrameworks>-->
 
     <!--Assembly and Namespace info -->
-    <AssemblyName>Plugin.FirebasePushNotification</AssemblyName>
+    <AssemblyName>Plugin.FirebasePushNotification.WOSendMessage</AssemblyName>
     <RootNamespace>Plugin.FirebasePushNotification</RootNamespace>
     <Title>Firebase Push Notification Plugin for Xamarin iOS and Android</Title>
     <Summary>Receive and handle firebase push notifications across Xamarin.iOS and Xamarin.Android</Summary>
     <Description>Receive and handle firebase push notifications across Xamarin.iOS and Xamarin.Android</Description>
 
     <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
+
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+
+    <Version>1.0.0</Version>
 
   </PropertyGroup>
 
@@ -116,6 +120,32 @@
     <None Remove="Platforms\Xamarin\**\*.cs" />
     <Compile Include="Platforms\Tizen\**\*.cs" />
     <Compile Include="Platforms\Xamarin\**\*.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Xamarin.Firebase.iOS.CloudMessaging" Version="8.10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="AsyncFixer" Version="1.6.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+    <PackageReference Update="Roslynator.Analyzers" Version="4.1.1">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'xamarin.ios10'">
+    <PackageReference Include="Xamarin.Firebase.iOS.InstanceID">
+      <Version>4.8.0</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
